--- a/package.json
+++ b/package.json
@@ -55,6 +55,10 @@
             {
                 "command": "gpt-copilot.setup",
                 "title": "GPT - Setup"
+            },
+            {
+                "command": "gpt-copilot.sync_file",
+                "title": "GPT - Sync current file"
             }
         ],
         "menus": {
@@ -81,6 +85,10 @@
                 },
                 {
                     "command": "gpt-copilot.ask_anything",
+                    "group": "z_commands"
+                },
+                {
+                    "command": "gpt-copilot.sync_file",
                     "group": "z_commands"
                 }
             ]
